web/app/themes/cfs/assets/styles/components/_accordions.scss
// Accordions
.fb-accordion {
  .accordion-content {
    position: relative;
  }
}

.accordion {
  margin: grid(4) 0 0;
}
.accordion-title {
  @include hr-above;
  margin: 0;
  padding: mobile-grid(3) 30px mobile-grid(3) 0;
  cursor: pointer;
  outline: none;
  .icon {
    width: 24px;
    height: 24px;
    position: absolute;
    top: 20px;
    right: 0;
    transform: rotate(90deg);
    transition: transform .2s steps(4);
  }
  &[aria-expanded=true] {
    .icon {
      transform: rotate(-90deg);
    }
  }

  @include media-md {
    padding: grid(4) 30px grid(4) 0;
    .icon {
      top: 36px;
    }
  }
}
.accordion-content {
  >p {
    margin-top: 0px;
  }
  padding-bottom: grid(3);
}

// Accordion media blocks (each accordion can have an associated block of content)
.media-block {
  &.stat {
    dl {
      margin: 0;
    }
    dd {
      @extend .h1;
      margin: 0 0 grid(2);
    }
    dt {
      @extend %small-text;
    }
  }
  &.pull-quote {
    blockquote {
      margin: 0;
    }
    p {
      margin: 0 0 grid(1);
      text-transform: uppercase;
      font: 30px/1 $font-header;
    }
    cite {
      display: block;
      text-align: right;
      @extend %small-text;
    }
  }
  &.images {
    img {
      display: block;
      box-shadow: 0 2px 4px 0 rgba(0,0,0,.5);
    }
    figcaption {
      display: block;
      margin-top: mobile-grid(2);
      font: 12px/1.5 $font-regular;
    }
  }

  @include media-md {
    position: absolute;
    bottom: grid(5);
    @include theme-color('color', $white, 'accent');

    // Make media-block chunkily enter when opening accordion
    opacity: 0;
    margin-left: 20px;
    transition: all .2s steps(2);
    &.active {
      opacity: 1;
      margin-left: 0;
    }

    &.stat,
    &.pull-quote {
      left: -#{columns(8,7)};
      width: columns(6,7);
    }
    &.images {
      left: -#{columns(11,7)};
      width: columns(10,7);

      img {
        float: left;
        width: columns(7,10);
      }

      figcaption {
        width: columns(3,10);
        float: left;
        padding: 0 columns(1,10) 0 $gutter;
      }
    }
  }
}

